--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="docs/style.css">
     <title>Document</title>
 </head>
 <body>
     <canvas id="myCanvas" class="myCanvas"></canvas>
     
 </body>
-<script src="main.js"></script>
+<script src="docs/main.js"></script>
 </html>
